styles/typography.css
@import url('https://fonts.googleapis.com/css?family=Nunito:bold,italic,bolditalic'); /* https://fonts.google.com/specimen/Rock+Salt */
@import url('https://fonts.googleapis.com/css2?family=Rock+Salt'); /* https://fonts.google.com/specimen/Nunito */

/* typography.css - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Fundamentals
  - http://webtypography.net
  - Spaces - http://webtypography.net/2.1.4
  - Vertical Spacing - http://webtypography.net/2.2.2
  - Special Characters Cheat Sheet - https://www.typewolf.com/cheatsheet

  - Golden Ratio:
    - https://en.wikipedia.org/wiki/Golden_ratio
    - https://www.adobe.com/creativecloud/design/discover/golden-ratio.html
    - https://www.pierrickcalvez.com/journal/a-five-minutes-guide-to-better-typography

  - W3C:
    - CSS Fonts https://www.w3.org/TR/css-fonts-4
    - https://w3c.github.io/csswg-drafts/css-fonts/
  - https://zellwk.com/blog/why-vertical-rhythms
  - https://trentwalton.com/2012/06/19/fluid-type/
  - https://varvy.com/mobile/legible-font-size.html
  - http://mikeyanderson.com/optimal_characters_per_line
  - https://pearsonified.com/2011/12/golden-ratio-typography.php
  - https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/typography/
*/

:root {
  --margin: 1ch auto;

  --text-align: center;

  --column-count: 1; /* https://drafts.csswg.org/css-multicol-1 */

  --tab-size: 2; /* &#0009 - https://developer.mozilla.org/en-US/docs/Web/CSS/tab-size */

  /*
  - Vertical rhythm
    - https://24ways.org/2006/compose-to-a-vertical-rhythm
    - https://css-tricks.com/simple-little-use-case-vmin/
    - https://www.smashingmagazine.com/2022/01/modern-fluid-typography-css-clamp/
  */
  --font-size: 3.6182vw; /* http://webtypography.net/2.1.2 */

  /* https://julian.is/article/iphone-x-notch/ */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/env */
  --viewport:
      env( safe-area-inset-top, 0.612em ) auto
      env( safe-area-inset-bottom, 0.612em ) auto;

  --smallest: 61.8%;

  --smaller:  80.0%;

  --larger:  120.0%;

  --largest: 161.8%;

  /*
    - https://caniuse.com/mdn-css_properties_margin-block
    - https://developer.mozilla.org/en-US/docs/Web/CSS/margin-block
    - https://css-tricks.com/almanac/properties/m/margin-block-start/
    - https://stackoverflow.com/questions/59909792/what-is-the-difference-between-margin-block-start-and-margin-top
    - https://www.js-craft.io/blog/css-logical-properties-using-the-margin-block-and-margin-inline-instead-of-the-default-margin/
  */
  --p-margin: 0 var(--line-height) var(--line-height); /* https://css-tricks.com/forums/topic/recommended-margin-for-paragraph-tag/ */

  --line-height: 1.618em; /* https://en.wikipedia.org/wiki/Golden_ratio */

  --word-spacing: -0.1681em; /* http://webtypography.net/2.1.1 */

  /* kerning "tracking"
      - 5%-12% (0.05em-0.012em) - https://practicaltypography.com/letterspacing.html
      - https://graphicdesign.stackexchange.com/questions/2606/difference-between-kerning-vs-letter-spacing
   */
  --letter-spacing: 0.0681em; /* https://css-tricks.com/almanac/properties/l/letter-spacing/ */

  /*
   - CHROME AUTO-RESIZING - https://docs.google.com/document/d/1PPcEwAhXJJ1TQShor29KWB17KJJq7UJOM34oHwYP3Zg/edit
   - https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/AdjustingtheTextSize/AdjustingtheTextSize.html#//apple_ref/doc/uid/TP40006510-SW16
   - Prevent adjustments of font size after orientation changes in iOS and mobile firefox.
   - https://developer.mozilla.org/en-US/docs/Web/CSS/text-size-adjust
   - https://caniuse.com/text-size-adjust
  */
  --text-size-adjust: 100%;

  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-family */
  /* https://css-tricks.com/snippets/css/system-font-stack/ */
  /* https://devhints.io/css-system-font-stack */
  --font-family: var(--system-ui);
  --font-family: chalk;

  --font-family-serif:
    ui-serif;

  --system-ui:
    system-ui,   /* https://caniuse.com/font-family-system-ui */
    -apple-system,           /* macOS 10.11-10.12 */
    BlinkMacSystemFont,      /* macOSX, Chrome */
    'segoe ui', segoe,       /* Windows 6+ */
    'RobotoRegular', roboto, /* Android 4+ */
    helvetica, arial,        /* Windows, macOSX, Linux defaults */
    ubuntu,                  /* Ubuntu 10.10+ */
    cantarell,               /* Gnome 3+ */
    'noto sans', oxygen,     /* KDE Plasma 5+ https://mail.kde.org/pipermail/distributions/2017-November/000258.html */
    ui-sans-serif, sans-serif, /* fallback */
    'Apple Color Emoji',     /* macOS emoji */
    'Segoe UI Emoji',        /* Windows emoji */
    'Segoe UI Symbol',       /* Windows emoji */
    'Noto Color Emoji',      /* Linux emoji */
    emoji;                   /* 🤷 */

  --font-family-mono:
    menlo, sfmono-regular,
    menlo, monaco, consolas, /* macOS 10.10+ */
    consolas,                /* Windows 6+ */'Roboto Mono',           /* Android 4+ */
    'Ubuntu Monospace',      /* Ubuntu 10.10+ */
    'Noto Mono',             /* KDE Plasma 5+ */
    'Oxygen Mono',           /* KDE Plasma 4+ */
    'Liberation Mono',       /* Linux/OpenOffice fallback */
    Courier,                 /* typewriter */
    ui-monospace, monospace; /* fallback */

  /* Margin collapse bugfix:
    - https://www.freecodecamp.org/news/what-is-margin-collapse-and-how-to-avoid-it/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model/Mastering_margin_collapsing
    - https://medium.com/fed-or-dead/margin-collapse-or-why-your-child-element-is-moving-the-parent-b199a0b60497
   */
  --margin-collapse-bugfix: 0.05px;
}

::-moz-selection /* set separately */
  { text-shadow: none }
::selection
  { text-shadow: none }
/* ... */

